--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "tomciklukas.dev",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "description": "This is Lukas",
+  "scripts": {
+    "lint": "eslint --ext .js,.jsx .",
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --progress --mode development --optimize-minimize"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomciklukas/tomciklukas.dev.git"
@@ -14,7 +17,37 @@
   },
   "homepage": "https://github.com/tomciklukas/tomciklukas.dev#readme",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "normalize.css": "8.0.1",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "styled-components": "5.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-transform-react-display-name": "7.8.3",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "clean-webpack-plugin": "3.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "html-webpack-plugin": "3.2.0",
+    "nodemon": "2.0.2",
+    "pug": "2.0.4",
+    "pug-loader": "2.4.0",
+    "raw-loader": "4.0.0",
+    "source-map-loader": "0.2.4",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
+    "yargs": "15.1.0"
   }
 }
