--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
 [*]
 charset=utf-8
-insert_final_newline=true
-indent_style=space
 indent_size=4
+indent_style=space
+insert_final_newline=true
 trim_trailing_whitespace=true
 
-[*.{json, yml}]
+[*.json]
 indent_size=2
-
