feat: new design

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "styled-components": "6.1.15"
   },
   "devDependencies": {
-    "parcel": "2.13.3",
-    "process": "0.11.10"
+    "parcel": "^2.13.3",
+    "process": "^0.11.10",
+    "svgo": "^3.3.2"
   }
 }
